# FactoryIsland

./: .gitignore  Cargo.toml
Launcher/: Cargo.toml  build.rs
Launcher/res/shapes/: knob.msfx  tick.msfx
Launcher/src/: app.rs  err.rs  main.rs  res.rs  uistyles.rs  winmsg.rs
Launcher/src/pages/: main.rs  mod.rs  world.rs
res/shaders/: clouds.frag  overlay.frag  overlay_blend.frag  ssao.frag
res/shapes/: knob.msfx
resources/rigs/: bore.mrf
src/: camera.rs  debug.rs  drawutils.rs  game.rs  gameloop.rs  gamesettings.rs  input.rs  main.rs  rendering.rs  res.rs  uistyles.rs
src/game/: camera.rs  debug.rs  events.rs  gameloop.rs  mod.rs  persistent.rs  place_tile.rs  worldview.rs
src/game/entity/: player.rs
src/game/event/: controls.rs  mod.rs  world.rs
src/game/screens/: debug.rs  entity.rs  mod.rs  world.rs
src/game/world/: chunk.rs  generator.rs  mod.rs  render.rs  save.rs
src/game/world/generator/: biome.rs  mod.rs  terrain.rs  tiles.rs
src/game/world/tiles/: mod.rs  reg.rs  terrain.rs
src/game/world/tiles/buildings/: wall.rs
src/game/world/tiles/machines/: bore.rs  mod.rs
src/ingredients/: mod.rs
src/mods/: mod.rs
src/player/: mod.rs
src/shaders/: clouds.frag  glitch.frag  ssao.frag
src/ui/: escape_screen.rs  mainscreen.rs  manager.rs  mod.rs  settings.rs  status_screen.rs
src/ui/display/: chat.rs  inventory.rs  mod.rs
src/world/: mod.rs  terrain_tex_mapper.rs  tile_tex_mapper.rs  tiles.rs
src/world/multitiles/: mod.rs
src/world/tiles/: mod.rs  resources.rs
src/world/tiles/impls/: conveyor.rs  lamp.rs  mod.rs  wood.rs
