[package]
name = "Client"
version = "0.1.0"
edition = "2021"

[dependencies]
mvlogger = "0.4.0"
mvutils = "1.3.2"
mvengine = { path = "../../MVEngineRev" }
mvengine_proc = { path = "../../MVEngineRev/Proc", package = "mvengine-proc-macro" }

bytebuffer = "2.3.0"
itertools = "0.14.0"
hashbrown = "0.15.2"
log = "0.4.25"
parking_lot = "0.12.3"
num-traits = "0.2.19"
crossbeam-channel = "0.5.14"

noise = "0.9.0"
rand = "0.8.5"