[package]
name = "FactoryIsland"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "Api", package = "Api" }

mvlogger = "0.4.0"
mvutils = "1.4.4"
mvengine = { path = "../MVEngine", features = ["timed"] }
mvengine_proc = { path = "../MVEngine/Proc", package = "mvengine-proc-macro" }

log = "0.4.25"
parking_lot = "0.12.3"
libloading = "0.8.6"
bytebuffer = "2.3.0"
