[package]
name = "FactoryIsland"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1
debug = false

[dependencies]
api = { path = "Api", package = "Api" }

mvlogger = "0.4.0"
mvutils = { version = "1.5.1", features = ["save_str"] }
mvengine = { path = "../MVEngine", features = ["timed"] }
mvengine_proc = { path = "../MVEngine/Proc", package = "mvengine-proc-macro" }

log = "0.4.25"
parking_lot = "0.12.3"
libloading = "0.8.6"
bytebuffer = "2.3.0"
hashbrown = "0.15.4"
