[package]
name = "Launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
mvlogger = "0.4.0"
mvutils = "1.5.9"
mvengine = { path = "../../MVEngine" }
mvengine_proc = { path = "../../MVEngine/Proc", package = "mvengine-proc-macro" }
api = {path = "../Api", package = "Api"}

log = "0.4.25"
parking_lot = "0.12.3"
bytebuffer = "2.3.0"
rand = "0.9.0"
hashbrown = "0.15.2"
ropey = "1.6.1"
windows = { version = "0.62.0", features = ["Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
winresource = "0.1.23"
